<resources>
    <string name="app_name">helperGomdori</string>
    <string name="naver_map_client_id">0bvotwa6np</string>
    <string name="kakao_app_key">kakao17abb9ddb66ddc971dd9ccf2c95a1a8e</string>
    <string name="app_name_kor">도움곰돌이</string>
    <string name="package_name">com.bf.helpergomdori</string>

    <!-- Signin Greeting-->
    <string name="signin_google">구글로 가입하기</string>
    <string name="signin_naver">네이버로 가입하기</string>
    <string name="signin_kakao">카카오로 가입하기</string>
    <string name="hello_helper_gomdori">안녕하세요.\n도움곰돌이에요.</string>
    <string name="signin_one_comment">도움이 돌아 더 나은 하루를</string>
    <string name="ok">확인</string>
    <string name="easy_login"><u>간편하게 시작하기</u></string>
    <!-- Signin Select Helping -->
    <string name="select_helping">도움 주기/받기를\n선택해주세요</string>
    <string name="giving_help">도움 주기</string>
    <string name="getting_help">도움 받기</string>
    <!-- Signin Helpee -->
    <string name="select_disabled_type">장애 유형 선택</string>
    <string name="what_kind_of_help">어떤 도움이 필요한지 알려주세요.</string>
    <string name="duplicate_selection">중복선택 가능합니다.</string>
    <string name="signin_only_one_select">하나만 선택해주세요.</string>
    <string name="what_kind_of_help_specifically">불편한 사항이나 도움받을 때 주의할 점 등\n자세하게 알려주세요.</string>
    <string name="message_to_bearfriend">* 도움을 줄 베어프렌드에게 전달됩니다.</string>
    <string name="helpee_language">언어장애</string>
    <string name="helpee_body">지체장애</string>
    <string name="helpee_eye">시각장애</string>
    <string name="helpee_ear">청각장애</string>
    <string name="helpee_developmental">발달장애</string>
    <string name="helpee_mental">정신장애</string>
    <string name="helpee_etc">기타</string>
    <!-- Signin Additional Info -->
    <string name="essential_input_info">필수 입력 항목</string>
    <string name="essential_input_phone">전화번호를 입력하세요.</string>
    <string name="essential_phone_ex">ex) 010-1234-5678</string>
    <string name="essential_input_name">이름을 입력하세요.</string>
    <string name="essential_name_ex">ex) 홍길동</string>

    <!-- Request Write -->
    <string name="specific_info_plz_1">세부 요청사항</string>
    <string name="specific_info_plz_2">을 입력해주세요.</string>
    <string name="stairs_lift">계단/리프트</string>
    <string name="sidewalks_crosswalks">인도/횡단보도</string>
    <string name="public_transport">대중교통</string>
    <string name="communication_problem">의사소통 문제</string>
    <string name="etc">기타</string>
    <string name="hello_name">안녕하세요 %s님,</string>
    <string name="request">요청사항</string>
    <string name="additional_info">특이사항</string>
    <string name="select_your_situation">도움이 필요한 상황을 선택해주세요.</string>
    <string name="bf_start">베어프렌즈 출발</string>
    <string name="request_ex_et">ex) 택시 타는 것을 도와주세요</string>

    <!-- request location -->
    <string name="current_location">강남구 테헤란로 329 삼흥빌딩</string>
    <string name="current_location_plz">현재 이 위치가 맞으신가요?\n정확한 위치를 알려주세요.</string>
    <string name="essential_location_ex">ex) 00편의점 바로 오른쪽 골목에 있어요.</string>
    <string name="main_request_bf_cancel">베어프렌즈 취소</string>
    <string name="searching_bf">베어프렌즈 찾는중...</string>
    <string name="we_met">만났어요</string>
    <string name="go_to_home">홈으로 이동</string>
    <string name="say_thank_you">감사인사 남기기</string>
    <string name="help_done">도움 받기 완료!</string>
    <string name="how_was_the_help">ㅇㅇ님, 도움은 어떠셨나요?\n감사한 마음을 표현해보아요.</string>


    <!-- mypage -->
    <string name="my_page">마이페이지</string>
    <string name="mypage_specific_info">특이사항</string>
    <string name="percentage">도움받은 비율</string>


    <!-- Main -->
    <string name="go_settings_and_allow_location">설정 > 애플리케이션 > 도움곰돌이에서 위치 권한을 허용해주세요</string>
    <string name="text_bf">베:프</string>
    <string name="text_gomdori">곰돌이</string>
    <string name="text_response">응답하기</string>
    <string name="main_request_bf">베어프렌즈 요청</string>
    <string name="main_profile_name">%s (%s)</string>
</resources>