<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ic_chulsu"
            android:layout_width="99dp"
            android:layout_height="99dp"
            android:src="@drawable/img_chulsu"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/hello_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/hello_name"
            app:layout_constraintBottom_toTopOf="@id/request"
            />



        <TextView
            android:id="@+id/request"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#63CCF9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request"
            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/select_your_situation"
            android:layout_marginBottom="19dp"
            />

        <TextView
            android:id="@+id/request2"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_info_plz_2"
            app:layout_constraintStart_toEndOf="@id/request"
            app:layout_constraintBottom_toTopOf="@+id/select_your_situation"
            android:layout_marginBottom="19dp"
            tools:ignore="DuplicateIds" />



        <TextView
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/select_your_situation"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_situation"
            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/checkbox_stairs_lift"
            app:layout_constraintVertical_bias="0.57" />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/background_request"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.349"
            tools:ignore="MissingConstraints"  />

        <CheckBox
            android:id="@+id/checkbox_stairs_lift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stairs_lift"
            android:textSize="20sp"
            android:theme="@style/signin_checkbox"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.349"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkbox_public_transport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_transport"
            android:textSize="20sp"
            android:layout_marginStart="36dp"
            android:theme="@style/signin_checkbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.405"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkbox_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etc"
            android:textSize="20sp"
            android:layout_marginStart="36dp"
            android:theme="@style/signin_checkbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.465"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkbox_walks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:text="@string/sidewalks_crosswalks"
            android:textSize="20sp"
            android:theme="@style/signin_checkbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.348"
            tools:ignore="MissingConstraints" />

        <CheckBox
            android:id="@+id/checkbox_communication_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="188dp"
            android:text="@string/communication_problem"
            android:textSize="20sp"
            android:theme="@style/signin_checkbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.395"
            tools:ignore="MissingConstraints" />

        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#63CCF9"
            android:id="@+id/sp_info_plz_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_info_plz_1"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57" />

        <TextView
            android:id="@+id/sp_info_plz_2"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specific_info_plz_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sp_info_plz_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57" />

        <EditText
            android:id="@+id/specific_info"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:background="@drawable/all_edge"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/btn_ok"
            android:layout_marginBottom="19dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:gravity="top"
            android:padding="16dp"
            tools:ignore="NotSibling" />

        <LinearLayout
            android:id="@+id/btn_ok"
            style="@style/btn"
            android:layout_marginHorizontal="0dp"
            tools:ignore="MissingConstraints"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_btn"
                android:text="@string/ok"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>