<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <fragment
            android:id="@+id/map_fragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:name="com.naver.maps.map.MapFragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/current_location"
            android:textSize="20sp"
            style="@style/font_request"
            android:textStyle="bold"
            android:textColor="@color/skyblue"
            android:paddingHorizontal="36dp"
            android:text="@string/current_location"
            app:layout_constraintBottom_toTopOf="@+id/current_location_plz"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/map_fragment"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp"
             />

        <TextView
            android:id="@+id/current_location_plz"
            android:textSize="20sp"
            style="@style/font_request"
            android:paddingHorizontal="36dp"
            android:text="@string/current_location_plz"
            app:layout_constraintBottom_toTopOf="@+id/et_location"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,UnknownId" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/essential_location_ex"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_request"
            android:imeOptions="actionDone"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_request"
            style="@style/btn_material"
            android:text="@string/main_request_bf"
            tools:ignore="MissingConstraints"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>