<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <ImageView
            android:id="@+id/ic_loading_bar_3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:src="@drawable/img_loading_bar_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />


        <TextView
            style="@style/font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/help_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            style="@style/CardView.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_help"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.228" />


        <ImageView
            android:id="@+id/ic_gomdori_hurray"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:src="@drawable/img_gomdori_hurray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_say_thank_you"
            style="@style/btn_material3"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/say_thank_you"
            tools:ignore="MissingConstraints"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_to_home"
            style="@style/btn_material4"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/go_to_home"
            tools:ignore="MissingConstraints"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>