<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ic_go_back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="36dp"
            android:src="@drawable/ic_go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <ImageView
            android:id="@+id/ic_chulsu"
            android:layout_width="99dp"
            android:layout_height="99dp"
            android:src="@drawable/img_chulsu"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14" />

        <LinearLayout
            android:id="@+id/ll_type"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_type_in_dialog"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"/>

        <EditText
            android:id="@+id/chulsu_info"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/all_edge"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:layout_marginStart="171dp"
            android:layout_marginEnd="36dp"
            />

        <TextView
            android:id="@+id/request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:textSize="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/request"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/request_specific_info"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:background="@drawable/all_edge"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            />

        <TextView
            android:id="@+id/additional_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/additional_info"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/special_info_text"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:background="@drawable/all_edge"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_request"
            style="@style/btn_material"
            android:text="@string/bf_start"
            tools:ignore="MissingConstraints"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>